Add other tests to check the fields, add permission, role and username csv (db table) , update database_setup.py

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@
 build/
 dist/
 easyris.egg*
+.idea/Copy of workspace (conflict from 02-04-2016 at 12h28).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 12h29).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 12h33).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 12h50).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 12h51).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 12h53) (1).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 12h53).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 18h20).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 18h22).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 18h24).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 18h25).xml
+.idea/Copy of workspace (conflict from 02-04-2016 at 18h26).xml
+.idea/uiDesigner.xml
+.idea/inspectionProfiles/Project_Default.xml
