--- a/easyris/config/easyris.cfg
+++ b/easyris/config/easyris.cfg
@@ -1,6 +1,6 @@
-DEBUG = True
-SECRET_KEY = 'A0Zr98j/3yX R~XHH!jmN]LWX/,?RT'
-SESSION_COOKIE_HTTPONLY = False
-PERMANENT_SESSION_LIFETIME = 24
-DATABASE_NAME = 'easyris'
-DATABASE_PORT = 27017
+DEBUG=True
+SECRET_KEY='A0Zr98j/3yX R~XHH!jmN]LWX/,?RT'
+SESSION_COOKIE_HTTPONLY=False
+PERMANENT_SESSION_LIFETIME=24
+
+
