NF: added accession number on examination + event

--- a/easyris/config/database_test.cfg
+++ b/easyris/config/database_test.cfg
@@ -1,10 +1,10 @@
 [mongodb]
 DATABASE_NAME=easyris_test
-DATABASE_RS=rs0
-DATABASE_CONFIG=node1,node2
+#DATABASE_RS=rs0
+DATABASE_CONFIG=node1
 
 [node1]
-DATABASE_IP=192.168.50.100
+DATABASE_IP=localhost
 DATABASE_PORT=27017
 
 [node2]
