FIX: ssl path inserted in easyris.cfg

--- a/easyris/config/easyris.cfg
+++ b/easyris/config/easyris.cfg
@@ -2,4 +2,5 @@ DEBUG=True
 SECRET_KEY='A0Zr98j/3yX R~XHH!jmN]LWX/,?RT'
 SESSION_COOKIE_HTTPONLY=False
 PERMANENT_SESSION_LIFETIME=24
-
+#SSL_PATH="/etc/nginx/ssl/"
+SSL_PATH="/etc/webserver-ssl/"
